--- a/django_ngq/ngq_app/templates/ngq_app/about.html
+++ b/django_ngq/ngq_app/templates/ngq_app/about.html
@@ -39,6 +39,6 @@
         <p>&copy; 2024 Next-Gen QA | All Rights Reserved</p>
     </footer>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
